--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>clint</title>
+    <script src="jquery-1.0.0.min.js"></script>        
 </head>
 <body>
     mt first website
